Bug 1096913 - Remove the simple cache entry when replacing the cache entry. r=mwu, a=lmandel

This solves the issue since *mRequest may be different for the replacing entry, causing the simple cache entry never to be removed from NotifyExpired or replaced. And the simple cache to grow indefinitely.