dom/canvas/CanvasImageCache.cpp
@@ -249,6 +249,7 @@ CanvasImageCache::NotifyDrawImage(Element* aImage,
       // We are overwriting an existing entry.
       gImageCache->mTotal -= entry->mData->SizeInBytes();
       gImageCache->RemoveObject(entry->mData);
+      gImageCache->mSimpleCache.RemoveEntry(*entry->mData->mRequest);
     }
     gImageCache->AddObject(entry->mData);
 
